# Raster2Cad

./: .env.example  .gitignore  CHANGELOG.en.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.en.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
Example/: PZRG.clean.dxf  PZRG.clean.report.json  PZRG.clean.scene.json  PZRG.dxf
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: jobs.py  models.py
backend/app/core/: config.py
backend/app/schemas/: models.py
backend/app/services/: copy_rebuild_service.py  copy_trace_service.py  dxf_service.py  image_service.py  model_registry.py  pipeline.py  repository.py  runtime_profile.py  scene_graph_contract.py  scene_graph_normalizer.py
backend/app/services/providers/: base.py  ollama_native.py  openai_compat.py
deploy/nginx/: raster2cad.conf.example
deploy/ollama/: override.conf.example
deploy/systemd/: raster2cad-backend.service.example
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts
scripts/: start-all.cmd  start-backend.cmd  start-frontend.cmd
